--- a/screenshot.html
+++ b/screenshot.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Intelligence Enhancer for Ingress - Screenshot</title>
 		<LINK href="popup.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="screenshot.js"></script>
+        <script type="text/javascript" src="lib/FileSaver.js"></script>
+        <script type="text/javascript" src="Utilities.js"></script>
 	</head>
 	<body class="screenshot">
-		<h2>Screen capture is below. Please right click to save for the time being.<h2>
+        <label>Save As: <input type="text" id="saveFileName" placeholder="filename"></label><button id="SaveToDisk">Save</button>
+		<h2>Screen capture is below.</h2>
+
 		<p>
-			<img id="screenshot" class="screenshot"></img>
+			<img id="screenshot" class="screenshot">
 		<p>
 	</body>
 </html>
