--- a/options.html
+++ b/options.html
@@ -7,9 +7,9 @@
 		<script type="text/javascript" src="Utilities.js"></script>
 	</head>
 	<body>
-<div id="w">
-	<form name="options" id="options" method="post" action="options.html">
-		<!--<header class="cathead">
+        <div id="w">
+	    <form name="options" id="options" method="post" action="options.html">
+		<header class="cathead">
 			<h2>Communications Panel</h2>
 			<p>What time was that really?</p>
 		</header>
@@ -20,7 +20,7 @@
 				<label class="c"><input type="radio" name="comm_default_chat_tab" value="faction" id="default_chat_faction"><span>Faction</span></label>
 				<h4 class="description">Allows you to set a default chat mode for when you load the intel page.</h4>
 			</div>
-			<div class="horizontalFlex">
+			<!--<div class="horizontalFlex">
 				<h3>Past Dates</h3>
 				<label class="c"><input type="radio" name="comm_past_dates" value="date_only" id="date_only"><span>Date Only</span></label>
 				<label class="c"><input type="radio" name="comm_past_dates" value="date_time" id="date_time"><span>Date Time</span></label>
@@ -31,8 +31,8 @@
 				<label class="c"><input type="radio" name="comm_time_format" value="standard" id="time_format_standard"><span>Standard</span></label>
 				<label class="c"><input type="radio" name="comm_time_format" value="twentyfour" id="time_format_twentyfour"><span>Twenty-Four</span></label>
 				<h4 class="description">Changes the time format for present day and past dates.</h4>
-			</div>
-		</section>-->
+			</div>-->
+		</section>
 		
 		<header class="cathead">
 			<h2>Screenshots</h2>
@@ -87,7 +87,6 @@
 				<label class="c"><input type="radio" name="screenshot_visibility_reward" value="hide" id="redeem_screenshot_hide"><span>Hide</span></label>
 				<h4 class="description">Passcode reward input and results section.</h4>
 			</div>
-			<!--This section not coded-->
 			<div class="horizontalFlex">
 				<h3>Search</h3>
 				<label class="c"><input type="radio" name="screenshot_visibility_search" value="show" id="search_screenshot_show"><span>Show</span></label>
