--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,8 @@
 	<head>
 		<title>popup.html page!</title>
 		<LINK href="popup.css" rel="stylesheet" type="text/css">
+        <!--<style type="text/css">
+        </style>-->
 		<script type="text/javascript" src="popup.js"></script>
 	</head>
 	<body>
