Adding map link and snapto geolocation to screenshot options to hide

--- a/options.html
+++ b/options.html
@@ -96,7 +96,7 @@
 				<h3>Other Clutter</h3>
 				<label class="c"><input type="radio" name="screenshot_visibility_clutter" value="show" id="clutter_screenshot_show"><span>Show</span></label>
 				<label class="c"><input type="radio" name="screenshot_visibility_clutter" value="hide" id="clutter_screenshot_hide"><span>Hide</span></label>
-				<h4 class="description">The MAP, INVESTIGATION, Community, and Invite sections.</h4>
+				<h4 class="description">The MAP(Title), INVESTIGATION, Community, and Invite sections. Additionaly the Link button.</h4>
 			</div>
 			<div class="horizontalFlex">
 				<h3>Mind Units</h3>
@@ -108,7 +108,7 @@
 				<h3>Google Maps Controls</h3>
 				<label class="c"><input type="radio" name="screenshot_visibility_controls" value="show" id="controls_screenshot_show"><span>Show</span></label>
                 <label class="c"><input type="radio" name="screenshot_visibility_controls" value="hide" id="controls_screenshot_hide"><span>Hide</span></label>
-				<h4 class="description">Google Maps zoom, mode(map/satellite), street view man, street view navigation controls.<br>NOTE: Specifically leaves copyright information intact.</h4>
+				<h4 class="description">Google Maps zoom, mode(map/satellite), street view man, street view navigation controls, goto geolocation.<br>NOTE: Specifically leaves copyright information intact.</h4>
 			</div>
             <div class="horizontalFlex">
                 <h3>Zoom Level Indicator</h3>
