Adding in option to not show extension updated notifications.

--- a/options.html
+++ b/options.html
@@ -217,6 +217,12 @@
 		</header>
 		<section class="catlinks">
 			<div class="horizontalFlex">
+				<h3>Extension Updated</h3>
+				<label class="c"><input type="radio" name="extension_updated_notification" value="on" id="extension_updated_notification_on"><span>On</span></label>
+				<label class="c"><input type="radio" name="extension_updated_notification" value="off" id="extension_updated_notification_off"><span>Off</span></label>
+				<h4 class="description">Turning this setting off will keep the extension from informing you when it updates. Personally I would want to know, but why not.</h4>
+			</div>
+			<div class="horizontalFlex">
 				<h3>IITC Incompatibility</h3>
 				<label class="c"><input type="radio" name="iitc_incompatibility_warn" value="on" id="iitc_incompatibility_warn_on"><span>On</span></label>
 				<label class="c"><input type="radio" name="iitc_incompatibility_warn" value="off" id="iitc_incompatibility_warn_off"><span>Off</span></label>
