Majority of changes for theming are present

--- a/options.html
+++ b/options.html
@@ -222,6 +222,15 @@
 				<h4 class="description">Makes the "Loading Data..." text non-selectable so you dont select the whole page while panning the map.</h4>
 				<!--Adds css pointer-events: none; to the surrounding div.-->
 			</div>
+			<div class="horizontalFlex">
+				<h3>IEFI Theme</h3>
+				<label class="c"><input type="radio" name="iefi_theme" value="faction" id="iefi_theme_faction"><span>Faction</span></label>
+				<label class="c"><input type="radio" name="iefi_theme" value="enlightened" id="iefi_theme_enlightened"><span>Enlightened</span></label>
+				<label class="c"><input type="radio" name="iefi_theme" value="resistance" id="iefi_theme_resistance"><span>Resistance</span></label>
+				<label class="c"><input type="radio" name="iefi_theme" value="classic" id="iefi_theme_classic"><span>Classic</span></label>
+				<h4 class="description">Changes the coloring of the Intelligence Enhancer for Ingress interface.</h4>
+				<!--Adds css pointer-events: none; to the surrounding div.-->
+			</div>
 		</section>
 		<header class="cathead">
 			<h2>Version Notifications</h2>
