--- a/popup.html
+++ b/popup.html
@@ -6,54 +6,65 @@
         </style>-->
 		<script type="text/javascript" src="popup.js"></script>
 	</head>
-	<body>
+	<body class="enlightened">
 		<div id="main_menu">
 			<div id="menu_saveView" class="horizontalFlex menuRow">
 				<img src="res/icon-128-menu.png">
 				<div class="box1">Save View</div>
 			</div>
 			<div id="menu_shareLink" class="horizontalFlex menuRow">
-				<img src="res/ic_menu_share.png">
+				<img class="share">
 				<div class="box1">Generate Direct Links to View</div>
 			</div>
+			<!--<div id="menu_shareLink2" class="horizontalFlex menuRow">
+				<img class="share2">
+				<div class="box1">Generate Direct Links to View</div>
+			</div>
+			<div id="menu_shareLink3" class="horizontalFlex menuRow">
+				<img class="share3">
+				<div class="box1">Generate Direct Links to View</div>
+			</div>
+			<div id="menu_shareLink4" class="horizontalFlex menuRow">
+				<img class="share4">
+				<div class="box1">Generate Direct Links to View</div>
+			</div>-->
 			<div id="menu_screenshot" class="horizontalFlex menuRow">
-				<img src="res/ic_menu_camera.png">
+				<img class="camera">
 				<div class="box1">Screenshot Current Intel</div>
 			</div>
 			<div id="menu_about" class="horizontalFlex menuRow">
-				<img src="res/ic_menu_info_details.png">
+				<img class="info">
 				<div class="box1">About Intelligence Enhancer for Ingress</div>
 			</div>
 			<div id="menu_options" class="horizontalFlex menuRow">
-				<img src="res/equalizer.png">
+				<img class="settings">
 				<div class="box1">Settings</div>
 			</div>
 			<!--<div id="DEBUG_MENU_ITEM" class="horizontalFlex menuRow">
 				<img src="res/ic_menu_info_details.png">
 				<div class="box1">DEBUG</div>-->
-			</div>
 		</div>
 		<fieldset id="viewList">
 			<legend>Saved Views:</legend>
-			<div class="horizontalFlex menuRow">
-				<img src="res/ic_menu_mapmode.png">
-				<div class="box1">Unfortunately bugs happen, and you are looking at one</div>
-				<img src="res/ic_menu_delete.png">
+			<div class="horizontalFlex menuRow">
+				<img class="mapView">
+				<div class="box1">Unfortunately bugs happen, and you are looking at one.</div>
+				<img class="trashView">
 			</div>
 			<div class="horizontalFlex menuRow">
-				<img src="res/ic_menu_mapmode.png">
+				<img class="mapView">
 				<div class="box1">This is a view name and it will fit. Infact lets assume it was way too long, lets see what happened. if we have any luck it will wrap and move the surrounding icons down.</div>
-				<img src="res/ic_menu_delete.png">
+				<img class="trashView">
 			</div>
 			<div class="horizontalFlex menuRow">
-				<img src="res/ic_menu_mapmode.png">
+				<img class="mapView">
 				<div class="box1">Now this one Ontheotherhandjustkeepsgoingsotheyreallyneedtodosomethinglike...idonobreakitsomehow.</div>
-				<img src="res/ic_menu_delete.png">
+				<img class="trashView">
 			</div>
 			<div class="horizontalFlex menuRow">
-				<img src="res/ic_menu_mapmode.png">
+				<img class="mapView">
 				<div class="box1">This is a view name and it will fit.</div>
-				<img src="res/ic_menu_delete.png">
+				<img class="trashView">
 			</div>
 		</fieldset>
 	</body>
