Added in developer option for forcing version incompatability

--- a/options.html
+++ b/options.html
@@ -253,6 +253,14 @@
 		</header>
 		<section class="catlinks">
 			<div class="horizontalFlex">
+				<h3>Force Incompatibility</h3>
+				<label class="c"><input type="radio" name="dev_force_incompatible_version" value="on" id="dev_force_incompatible_version_on"><span>On</span></label>
+				<label class="c"><input type="radio" name="dev_force_incompatible_version" value="off" id="dev_force_incompatible_version_off"><span>Off</span></label>
+				<h4 class="description">Turning this setting on will make the extension think it is incompatible with the current dashboard version. In effect this will trigger the alternate hooking mode.</h4>
+			</div>
+		</section>
+		<section class="catlinks">
+			<div class="horizontalFlex">
 				<h3>Adjusted Map Theme</h3>
 				<label class="c"><input type="radio" name="dev_map_filter_mode" value="off" id="dev_map_filter_mode_off"><span>Off</span></label>
 				<label class="c"><input type="radio" name="dev_map_filter_mode" value="wwii" id="dev_map_filter_mode_wwii"><span>WWII</span></label>
