Added directLinks to the themed screens. Moved setTheme to Utilities.java

--- a/directLinks.html
+++ b/directLinks.html
@@ -3,6 +3,7 @@
 <head>
     <title>Intelligence Enhancer for Ingress - Direct Links</title>
     <LINK href="combo.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="Utilities.js"></script>
     <script type="text/javascript" src="directLinks.js"></script>
 </head>
 <body>
