--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
 		<LINK href="popup.css" rel="stylesheet" type="text/css">
         <!--<style type="text/css">
         </style>-->
+        <script type="text/javascript" src="Utilities.js"></script>
 		<script type="text/javascript" src="popup.js"></script>
 	</head>
 	<body class="enlightened">
