--- a/options.html
+++ b/options.html
@@ -42,7 +42,7 @@
 				<h3>Agentur's Readability Tweaks</h3>
 				<label class="c"><input type="radio" name="comm_agentur_readability_css" value="on" id="comm_agentur_readability_css_on"><span>On</span></label>
 				<label class="c"><input type="radio" name="comm_agentur_readability_css" value="off" id="comm_agentur_readability_css_off"><span>Off</span></label>
-				<h4 class="description">Various display tweaks provided by root@agentursimon.de. NOTE: Requires page reload to apply.</h4>
+				<h4 class="description">Various display tweaks provided by Bertram Simon. NOTE: Requires page reload to apply.</h4>
 			</div>
 		</section>
 		<header class="cathead">
