credit where tis due part two

--- a/options.html
+++ b/options.html
@@ -39,7 +39,7 @@
 				<h4 class="description">Determines visibibility of the portal addresses in the chat log. NOTE: Requires page reload to apply.</h4>
 			</div>
 			<div class="horizontalFlex">
-				<h3>Agentur's Readability Tweaks</h3>
+				<h3>Bertram's Readability Tweaks</h3>
 				<label class="c"><input type="radio" name="comm_agentur_readability_css" value="on" id="comm_agentur_readability_css_on"><span>On</span></label>
 				<label class="c"><input type="radio" name="comm_agentur_readability_css" value="off" id="comm_agentur_readability_css_off"><span>Off</span></label>
 				<h4 class="description">Various display tweaks provided by Bertram Simon. NOTE: Requires page reload to apply.</h4>
