Dashboard compatability update of 2013.07.17. Added screenshot hide filter

--- a/extension/options.html
+++ b/extension/options.html
@@ -122,6 +122,12 @@
                 <label class="c"><input type="radio" name="screenshot_visibility_controls" value="hide" id="controls_screenshot_hide"><span>Hide</span></label>
 				<h4 class="description">Google Maps zoom, mode(map/satellite), street view man, street view navigation controls, goto geolocation.<br>NOTE: Specifically leaves copyright information intact.</h4>
 			</div>
+			<div class="horizontalFlex">
+                <h3>Portal Filter Controls</h3>
+                <label class="c"><input type="radio" name="screenshot_visibility_filter" value="show" id="screenshot_visibility_filter_show"><span>Show</span></label>
+                <label class="c"><input type="radio" name="screenshot_visibility_filter" value="hide" id="screenshot_visibility_filter_hide"><span>Hide</span></label>
+                <h4 class="description">The portal health and level filters.</h4>
+            </div>
             <div class="horizontalFlex">
                 <h3>Zoom Level Indicator</h3>
                 <label class="c"><input type="radio" name="screenshot_visibility_zoom" value="show" id="screenshot_visibility_zoom_show"><span>Show</span></label>
