Compatibility patc or dashboard update on 2013.08.08

--- a/extension/options.html
+++ b/extension/options.html
@@ -108,7 +108,7 @@
 				<h3>Other Clutter</h3>
 				<label class="c"><input type="radio" name="screenshot_visibility_clutter" value="show" id="clutter_screenshot_show"><span>Show</span></label>
 				<label class="c"><input type="radio" name="screenshot_visibility_clutter" value="hide" id="clutter_screenshot_hide"><span>Hide</span></label>
-				<h4 class="description">The MAP(Title), INVESTIGATION, Community, and Invite sections. Additionaly the Link button.</h4>
+				<h4 class="description">The MAP(Title), INVESTIGATION, Community, Ingress Report Badge, and Invite sections. Additionaly the Link button.</h4>
 			</div>
 			<div class="horizontalFlex">
 				<h3>Mind Units</h3>
